--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,8 @@
     "plugin:react/recommended",
     "airbnb",
     "plugin:prettier/recommended",
-    "plugin:jsx-a11y/recommended"
+    "plugin:jsx-a11y/recommended",
+    "plugin:react-hooks/recommended"
   ],
   "parserOptions": {
     "ecmaFeatures": {
@@ -19,7 +20,7 @@
     "ecmaVersion": "latest",
     "sourceType": "module"
   },
-  "plugins": ["react", "plugin:react/jsx-runtime"],
+  "plugins": ["react"],
   "rules": {
     "no-console": "off",
     "react/react-in-jsx-scope": "off",
@@ -30,6 +31,10 @@
         "when": "multiline"
       }
     ],
+    "react/prop-types": 0,
+    "react/no-unescaped-entities": 0,
+    "react/no-unknown-property": 0,
+    "react/no-array-index-key": 0,
     "react/jsx-indent": [2, "tab"],
     "react/jsx-indent-props": [2, "tab"],
     "react/jsx-one-expression-per-line": 0,
