--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint .",
-    "lint:fix": "eslint -fix ."
+    "lint:fix": "eslint --fix ."
   },
   "eslintConfig": {
     "extends": [
